--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 body{
-    background-color: black;
-    background-image: url(/gif/open-estatue-oscar.gif);
+    background-color: rgba(25, 2, 47, 0.2);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    background-image: url(/gif/open-statue-oscar.gif);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -32,18 +34,31 @@ h2{
     background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: cover;
+    animation: flash 2s infinite;
 }
 .s-star{
     text-align: center;
 }
-.star{
-    width: 150px;
+.btn{
+    background-color: transparent;
+    color: azure;
+    font-family: ;
+    font-size: 25px;
+    padding: 15px 30px;
+    margin-top: 25px;
+    border: 3px solid;
+    border-image: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
+}
+.btn:hover{
+    background-color: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
 }
 
 
 @media (max-width:450px){
         body{
-    background-color: black;
+    background-color: rgba(25, 2, 47, 0.2);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
     background-image: url(/gif/open-estatue-oscar.gif);
     background-repeat: no-repeat;
     background-size: cover;
@@ -70,4 +85,7 @@ h2{
         -webkit-text-fill-color: transparent;
         background-size: cover;
         }
+        .star{
+        width: 100px;
+}
 }
