open page final

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 }
 body{
-    background: radial-gradient(#000, #646875);
+    background: radial-gradient(#000, #06070b);
     margin: 0;
     padding: 0;
     height: 100vh;
