--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -13,7 +18,9 @@ body{
 }
 
 h1{
-    font-size: 7rem;
+    font-size: 5rem;
+    font-family: Raleway;
+    font-weight: 900;
     text-align: center;
     margin-top: 30vh;
     background-image: url(../img/gold-gradient.jpg);
@@ -25,7 +32,8 @@ h1{
 
 }
 h2{
-    font-size: 4rem;
+    font-size: 3rem;
+    font-family: Raleway;
     text-align: center;
     margin-top: 5vh;
     background-image: url(../img/gold-gradient2.jpg);
@@ -34,37 +42,57 @@ h2{
     background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: cover;
-    animation: flash 2s infinite;
 }
 .s-star{
     text-align: center;
 }
+.s-star img{
+    width: 150px;
+    height: 150px;
+}
+.box-btn{
+    text-align: center;
+}
 .btn{
-    background-color: transparent;
-    color: azure;
-    font-family: ;
-    font-size: 25px;
+    background: url(/img/gold-gradient.jpg);
+    color: black;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-size: 15px;
+    font-weight: 700;
     padding: 15px 30px;
     margin-top: 25px;
-    border: 3px solid;
+    border: 1px solid;
     border-image: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
 }
 .btn:hover{
-    background-color: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
+    background: url(/img/gold-gradient2.jpg);
+    color: black;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: 700;
+    padding: 15px 30px;
+    margin-top: 25px;
+    border: 1px solid yellow;
+    cursor: pointer;
 }
 
-
-@media (max-width:450px){
+@media (max-width:400px){
         body{
-    background-color: rgba(25, 2, 47, 0.2);
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
-    background-image: url(/gif/open-estatue-oscar.gif);
-    background-repeat: no-repeat;
-    background-size: cover;
+        height: 100%;   
+        background-color: rgba(25, 2, 47, 0.2);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        background-image: url(/gif/open-statue-oscar.gif);
+        background-repeat: no-repeat;
+        background-size: cover;
 }
         h1{
-        font-size: 4rem;
+        font-size: 3rem;
+        font-family: Raleway;
+        font-weight: 900;
         text-align: center;
         margin-top: 30vh;
         background-image: url(../img/gold-gradient.jpg);
@@ -76,6 +104,7 @@ h2{
         }
         h2{
         font-size: 2rem;
+        font-family: Raleway;
         text-align: center;
         margin-top: 5vh;
         background-image: url(../img/gold-gradient2.jpg);
@@ -85,7 +114,187 @@ h2{
         -webkit-text-fill-color: transparent;
         background-size: cover;
         }
-        .star{
-        width: 100px;
+        .s-star{
+    text-align: center;
+        }
+        .s-star img{
+            width: 150px;
+            height: 150px;
+        }
+        .box-btn{
+            text-align: center;
+        }
+        .btn{
+            background: url(/img/gold-gradient.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid;
+            border-image: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
+        }
+        .btn:hover{
+            background: url(/img/gold-gradient2.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            letter-spacing: 1px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid yellow;
+            cursor: pointer;
+        }
+        
 }
+
+@media (max-width:450px){
+        body{
+        height: 100%;   
+        background-color: rgba(25, 2, 47, 0.2);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        background-image: url(/gif/open-statue-oscar.gif);
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+        h1{
+        font-size: 3rem;
+        font-family: Raleway;
+        font-weight: 900;
+        text-align: center;
+        margin-top: 30vh;
+        background-image: url(../img/gold-gradient.jpg);
+        -webkit-background-clip: text;
+        -ms-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: cover;
+        }
+        h2{
+        font-size: 2rem;
+        font-family: Raleway;
+        text-align: center;
+        margin-top: 5vh;
+        background-image: url(../img/gold-gradient2.jpg);
+        -webkit-background-clip: text;
+        -ms-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: cover;
+        }
+        .s-star{
+    text-align: center;
+        }
+        .s-star img{
+            width: 150px;
+            height: 150px;
+        }
+        .box-btn{
+            text-align: center;
+        }
+        .btn{
+            background: url(/img/gold-gradient.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid;
+            border-image: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
+        }
+        .btn:hover{
+            background: url(/img/gold-gradient2.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            letter-spacing: 1px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid yellow;
+            cursor: pointer;
+        }
+        
+}
+
+
+@media (max-width:750px){
+        body{
+        height: 100%;   
+        background-color: rgba(25, 2, 47, 0.2);
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        background-image: url(/gif/open-statue-oscar.gif);
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+        h1{
+        font-size: 3rem;
+        font-family: Raleway;
+        font-weight: 900;
+        text-align: center;
+        margin-top: 30vh;
+        background-image: url(../img/gold-gradient.jpg);
+        -webkit-background-clip: text;
+        -ms-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: cover;
+        }
+        h2{
+        font-size: 2rem;
+        font-family: Raleway;
+        text-align: center;
+        margin-top: 5vh;
+        background-image: url(../img/gold-gradient2.jpg);
+        -webkit-background-clip: text;
+        -ms-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: cover;
+        }
+        .s-star{
+    text-align: center;
+        }
+        .s-star img{
+            width: 150px;
+            height: 150px;
+        }
+        .box-btn{
+            text-align: center;
+        }
+        .btn{
+            background: url(/img/gold-gradient.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid;
+            border-image: linear-gradient(227.91deg, rgb(218, 142, 1) 0%, yellow 100%) 1;
+        }
+        .btn:hover{
+            background: url(/img/gold-gradient2.jpg);
+            color: black;
+            text-transform: uppercase;
+            font-family: sans-serif;
+            font-size: 15px;
+            letter-spacing: 1px;
+            font-weight: 700;
+            padding: 15px 30px;
+            margin-top: 25px;
+            border: 1px solid yellow;
+            cursor: pointer;
+        }
+        
 }
